--- a/backend/package.json
+++ b/backend/package.json
@@ -12,11 +12,14 @@
   "description": "",
   "dependencies": {
     "bcrypt": "^5.1.1",
+    "cloudinary": "^1.41.3",
     "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
     "dotenv": "^16.5.0",
     "express": "^4.2.0",
     "jsonwebtoken": "^9.0.2",
+    "multer": "^2.0.0",
+    "multer-storage-cloudinary": "^4.0.0",
     "mysql2": "^3.14.1",
     "sequelize": "^6.37.7"
   }
